--- a/res/layout/main_gallery.xml
+++ b/res/layout/main_gallery.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
         >
-
-    <ImageView android:id="@+id/thumbnail"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_alignParentTop="true"/>
-
-    <ImageView android:id="@+id/thumbnail2"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_centerInParent="true"/>
-
-    <ImageView android:id="@+id/thumbnail3"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_alignParentBottom="true"
-               android:layout_alignParentRight="true"/>
+    <fragment
+        android:id="@+id/galleryfragment"
+        android:layout_height="match_parent"
+        android:layout_width="0dip"
+        class="se.magnulund.PictureGallery.fragments.GalleryFragment"
+        />
 </RelativeLayout>
 
