--- a/res/layout/main_gallery.xml
+++ b/res/layout/main_gallery.xml
@@ -7,6 +7,7 @@
         android:id="@+id/galleryfragment"
         android:layout_height="match_parent"
         android:layout_width="0dip"
+        android:name="se.magnulund.PictureGallery.fragments.GalleryFragment"
         />
 </RelativeLayout>
 
