--- a/res/layout-land/image_detail_fragment.xml
+++ b/res/layout-land/image_detail_fragment.xml
@@ -3,5 +3,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+    <ImageView android:id="@+id/ImageDetailView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerInside"
+        android:contentDescription="@string/image_description"/>
 
 </RelativeLayout>
