--- a/res/layout-land/gallery_fragment.xml
+++ b/res/layout-land/gallery_fragment.xml
@@ -2,6 +2,12 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="#33FF0000">
+
+    <ListView android:id="@android:id/list"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+            />
 
 </RelativeLayout>
