--- a/res/layout-land/main_gallery.xml
+++ b/res/layout-land/main_gallery.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/galleryfragment"
         android:layout_height="match_parent"
-        android:layout_width="0dip"
+        android:layout_width="match_parent"
         class="se.magnulund.PictureGallery.fragments.GalleryFragment"
         />
 
