--- a/res/layout/image_detail_fragment.xml
+++ b/res/layout/image_detail_fragment.xml
@@ -2,9 +2,10 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+    android:background="@android:color/white">
 
-    <ImageView android:id="@+id/ImageDetailView"
+    <ImageView android:id="@+id/image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
