--- a/res/layout-land/main_gallery.xml
+++ b/res/layout-land/main_gallery.xml
@@ -2,12 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-        >
-    <fragment
-            android:id="@+id/galleryfragment"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:name="se.magnulund.PictureGallery.fragments.GalleryFragment"
-            />
+    >
+    <View
+        android:id="@+id/galleryfragment"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
 </RelativeLayout>
 
