--- a/res/layout/main_gallery.xml
+++ b/res/layout/main_gallery.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
         >
-    <View
+    <FrameLayout
         android:id="@+id/galleryfragment"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
