--- a/res/layout/gallery_list_item.xml
+++ b/res/layout/gallery_list_item.xml
@@ -11,7 +11,8 @@
               android:layout_alignParentTop="true"
             />
 
-    <ImageView android:id="@+id/imageView"
+    <se.magnulund.PictureGallery.views.GalleryImageView
+        android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
 
