--- a/res/layout-land/image_detail_fragment.xml
+++ b/res/layout-land/image_detail_fragment.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-    <ImageView android:id="@+id/image_detail"
+    <se.magnulund.PictureGallery.views.GalleryImageView android:id="@+id/image_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerInside"
