--- a/res/layout/gallery_list_item.xml
+++ b/res/layout/gallery_list_item.xml
@@ -12,7 +12,7 @@
             />
 
     <se.magnulund.PictureGallery.views.GalleryImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
 
